xenxynon sounds better

--- a/overlay/packages/apps/Settings/res/values/strings.xml
+++ b/overlay/packages/apps/Settings/res/values/strings.xml
@@ -14,5 +14,5 @@
     limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="protonplus_maintainer_summary">Mayur</string>
+    <string name="protonplus_maintainer_summary">xenxynon</string>
 </resources>
