--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -14,8 +14,9 @@
      limitations under the License.
 -->
 <resources>
-    <string name="advanced_settings">Xiaomi Parts</string>
-    <string name="advanced_settings_summary">Misc Settings from Xiaomi™</string>
+    <string name="advanced_settings">Device Settings</string>
+    <string name="advanced_settings_summary">Device specific advanced settings</string>
+
     <string name="display_title">Display</string>
 
     <!-- Mi Note 3 Settings -->
